istio/delivery-service-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-v2
  labels:
    app: delivery
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delivery
      version: v2
  template:
    metadata:
      labels:
        app: delivery
        version: v2
    spec:
      containers:
        - name: delivery
          image: quickdelivery/delivery-service:v2
          ports:
            - containerPort: 80
