istio/orderservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: quickdelivery/orderservice:latest
          ports:
            - containerPort: 8080
