istio/deliveryservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deliveryservice
spec:
  selector:
    app: deliveryservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
