istio/delivery-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delivery-service
spec:
  hosts:
    - delivery-service
  http:
    - route:
        - destination:
            host: delivery-service
            subset: v1
          weight: 90
        - destination:
            host: delivery-service
            subset: v2
          weight: 10
