istio/quickdelivery-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quickdelivery
spec:
  host: quickdelivery
  subsets:
    - name: v1
      labels:
        version: v1
