istio/quickdelivery-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quickdelivery
spec:
  hosts:
    - quickdelivery
  http:
    - route:
        - destination:
            host: quickdelivery
            subset: v1
